fix navbar and z-index issue with about

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,6 +6,7 @@
   color: #c5c6c7;
   display: flex;
   justify-content: center;
+  z-index: -1;
 }
 
 .about-title {
